--- a/homework_5/caramelpecanorder.html
+++ b/homework_5/caramelpecanorder.html
@@ -34,7 +34,7 @@
 				<a id="originaldescription" href="./originalorder.html">
 					<img src="originalbun.png" alt="Original"></a>
 				<div class="pumpkinspicemenu">
-					<img src="pumkinspicebun.png" alt="pumpkin spice bun">
+					<img src="PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 				<div class="walnut">
 					<img src="walnutbun.png" alt="walnut bun">
