--- a/homework_5/indexbunbun.html
+++ b/homework_5/indexbunbun.html
@@ -40,7 +40,7 @@
 					<img src="blackberrybun.png" alt="Blackberry Bun" style="width:100%;">
 				</div>
 				<div class="pumpkinspice">
-					<img src="PUMKINSPICEbun.png" alt="Pumpkin Spice Bun" style="width:100%;">
+					<img src="PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 			</div>
 			<div class=bottomfooter>
