--- a/homework_5/blackberryorder.html
+++ b/homework_5/blackberryorder.html
@@ -24,7 +24,7 @@
 				<div class="menuorder"></div>
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="star.png" alt="star">
+					<img src="Star.png" alt="star">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
@@ -49,7 +49,7 @@
 						</div>
 						<div class="blackberrytitle"><b>BLACKBERRY</b></div>
 						<div class="starblackberry">
-							<img src="star.png" alt="starblackberry">
+							<img src="Star.png" alt="starblackberry">
 						</div>
 						<div class="blackberrydescription">
 							This fresh, fruity bun is a fan favorite! Every morning,<br>we infuse our <i>freshly kneaded</i> buttery dough with<br>the juiciest local blackberries. Then we bake every <br>bun until it’s <i>golden brown</i>, and top it off with a <br>sweet, glazing of your choosing, at no extra cost!
