--- a/homework_5/caramelpecanorder.html
+++ b/homework_5/caramelpecanorder.html
@@ -24,7 +24,7 @@
 				<div class="menuorder"></div>
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="star.png" alt="star">
+					<img src="Star.png" alt="star">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
