--- a/homework_5/originalorder.html
+++ b/homework_5/originalorder.html
@@ -24,7 +24,7 @@
 				<div class="menuorder"></div>
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="star.png" alt="star">
+					<img src="Star.png" alt="star">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
@@ -49,7 +49,7 @@
 						</div>
 						<div class="blackberrytitle"><b>ORIGINAL</b></div>
 						<div class="starblackberry">
-							<img src="star.png" alt="starblackberry">
+							<img src="Star.png" alt="starblackberry">
 						</div>
 						<div class="blackberrydescription">
 							You can never go wrong with our classic, famous <br>original cinnamon buns! These fluffy, warm buns are <br>a customer favorite, and are the perfect snack for <br>any time of day. What's even better is that you can <br>add <i>any</i> glazing you'd like, for <i>no extra cost!</i>
