--- a/homework_5/blackberryorder.html
+++ b/homework_5/blackberryorder.html
@@ -49,7 +49,7 @@
 						</div>
 						<div class="blackberrytitle"><b>BLACKBERRY</b></div>
 						<div class="starblackberry">
-							<img src="bluestar.png" alt="starblackberry">
+							<img src="bluestar.png" alt="star">
 						</div>
 						<div class="blackberrydescription">
 							This fresh, fruity bun is a fan favorite! Every morning,<br>we infuse our <i>freshly kneaded</i> buttery dough with<br>the juiciest local blackberries. Then we bake every <br>bun until it’s <i>golden brown</i>, and top it off with a <br>sweet, glazing of your choosing, at no extra cost!
