--- a/homework_5/updatedcartmenu.html
+++ b/homework_5/updatedcartmenu.html
@@ -23,7 +23,7 @@
 			<div class= "menu">
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="bluestar.png" alt="star">
+					<img src="bluestar.png" alt="starforcart">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
