--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Hello World</h1>
-		<p>I'm hosted with GitHub Pages.</p>
+		<h1>Welcome to my page for Homework 5</h1>
+		<p>To access my prototype, click <a id="linkforindexbunbun" href="./indexbunbun.html">here</a></p>
+		<p>To access my relection, click <a id="reflection" href="./Reflection.pdf">here</a></p>
 	</body>
 </html>
