--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -4,5 +4,6 @@
 		<h1>Welcome to my page for Homework 5</h1>
 		<p>To access my prototype, click <a id="linkforindexbunbun" href="./indexbunbun.html">here</a></p>
 		<p>To access my relection, click <a id="reflection" href="./Reflection.pdf">here</a></p>
+		<p>The basic requirements I fulfilled were: <br>1) creating a home page that navigates to the product browsing and product detail page <br>2) creating the product browsing page <br>3) creating the product detail page for the blackberry cinnamon roll. <br>For bonus points, I created an additional product detail page for the caramel pecan cinnamon bun and the original bun.</p>
 	</body>
 </html>
