--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 	<body>
 		<h1>Welcome to my page for Homework 5</h1>
-		<p>To access my prototype, click <a id="linkforindexbunbun" href="./indexbunbun.html">here</a></p>
-		<p>To access my relection, click <a id="reflection" href="./Reflection.pdf">here</a></p>
+		<p>To access my homework 5 file, click <a id="linktohw5" href="./homework_5">here</a></p>
 	</body>
 </html>
