--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<body>
-		<h1>Welcome to my page for Homework 5</h1>
+		<h1>Welcome to Jocelyn Gao's GitHub Page 5</h1>
 		<p>To access my homework 5 file, click <a id="linktohw5" href="./homework_5">here</a></p>
 	</body>
 </html>
