--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 	<body>
 		<h1>Welcome to Jocelyn Gao's GitHub Page</h1>
-		<p>To access my homework 5 file, click <a id="linktohw5" href="./homework_5">here</a></p>
+		<p>To access my homework 5 file, click <a id="linktohw5" href="./homework_5/index.html">here</a></p>
 	</body>
 </html>
