--- a/homework_5/caramelpecanorder.html
+++ b/homework_5/caramelpecanorder.html
@@ -10,42 +10,42 @@
 		<div class="pagecontainer">
 			<div class="navbar">
 				<a class="active" id="homelogo" href="./indexbunbun.html">
-					<img src="bunbunlogo.png" alt="Home">
+					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none"><b>MENU</b></a>
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
 				<a id="cartempty" href="#shoppingcartempty">
-					<img src="shoppingcart-emptylogo.png" alt="Cart">
+					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 			</div>
 			<div class= "menu">
 				<div class="menuorder"></div>
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="bluestar.png" alt="star">
+					<img src="images/bluestar.png" alt="star">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
-					<img src="blackberrybun.png" alt="Blackberry"></a>
+					<img src="images/blackberrybun.png" alt="Blackberry"></a>
 				<a id="carameldescription" href="./caramelpecanorder.html">
-					<img src="caramelpecanbun.png" alt="Caramel Pecan"></a>
+					<img src="images/caramelpecanbun.png" alt="Caramel Pecan"></a>
 				<a id="originaldescription" href="./originalorder.html">
-					<img src="originalbun.png" alt="Original"></a>
+					<img src="images/originalbun.png" alt="Original"></a>
 				<div class="pumpkinspicemenu">
-					<img src="PUMKINSPICEbun.png" alt="pumpkin spice bun">
+					<img src="images/PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 				<div class="walnut">
-					<img src="walnutbun.png" alt="walnut bun">
+					<img src="images/walnutbun.png" alt="walnut bun">
 				</div>
 				<div class="originalgf">
-					<img src="originalgfbun.png" alt="original gluten free bun">
+					<img src="images/originalgfbun.png" alt="original gluten free bun">
 				</div>
 				<div class="blackberrycustomize">
 					<div class="ordercontainer">
 						<div class= "blackberryalone">
-							<img src="caramelpecanonly.png" alt="caramel pecan">
+							<img src="images/caramelpecanonly.png" alt="caramel pecan">
 						</div>
 						<div class="carameltitle"><b>CARAMEL PECAN</b></div>
 						<div class="blackberrydescription">
@@ -53,7 +53,7 @@
 						</div>
 						<div class="cancel">
 							<a class="active" href="./menu.html">
-								<img src="cancel.png" alt="x">
+								<img src="images/cancel.png" alt="x">
 							</a>
 						</div>
 						<!--
@@ -97,7 +97,7 @@
 				</div>
 			</div>
 			<footer class="menubottomfooter">
-				<img src="bunbunlogo.png" alt="Home">
+				<img src="images/bunbunlogo.png" alt="Home">
 				<div class="footer">1234 Best Buns Street, Pittsburgh PA, 15213<br>Email: bunbuns@bunmail.com  l  Phone: (412)-BUN-BUNS</div> 
 			</footer>
 		</div>
