--- a/homework_5/indexbunbun.html
+++ b/homework_5/indexbunbun.html
@@ -10,14 +10,14 @@
 		<div class= "pagecontainer">
 			<div class="navbar">
 				<a class="active" id="homelogo" href="./indexbunbun.html">
-					<img src="bunbunlogo.png" alt="Home">
+					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none">MENU</a>
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
 				<a id="cartempty" href="#shoppingcartempty">
-					<img src="shoppingcart-emptylogo.png" alt="Cart">
+					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 			</div>
 			<div class="container">
@@ -34,17 +34,17 @@
 					<a id="seebakerymenu" href="./menu.html" style="text-decoration:none"><h2>SEE BAKERY MENU</h2></a>
 				</div>
 				<div class="original">
-					<img src="originalbun.png" alt="Original Bun" style="width:100%;">
+					<img src="images/originalbun.png" alt="Original Bun" style="width:100%;">
 				</div>
 				<div class="blackberry">
-					<img src="blackberrybun.png" alt="Blackberry Bun" style="width:100%;">
+					<img src="images/blackberrybun.png" alt="Blackberry Bun" style="width:100%;">
 				</div>
 				<div class="pumpkinspice">
-					<img src="PUMKINSPICEbun.png" alt="pumpkin spice bun">
+					<img src="images/PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 			</div>
 			<div class=bottomfooter>
-				<img src="bunbunlogo.png" alt="Home">
+				<img src="images/bunbunlogo.png" alt="Home">
 				<div class="footer">1234 Best Buns Street, Pittsburgh PA, 15213<br>Email: bunbuns@bunmail.com  l  Phone: (412)-BUN-BUNS</div> 
 			</div>
 		</div>	
