--- a/homework_5/originalorder.html
+++ b/homework_5/originalorder.html
@@ -10,53 +10,53 @@
 		<div class= "pagecontainer">
 			<div class="navbar">
 				<a class="active" id="homelogo" href="./indexbunbun.html">
-					<img src="bunbunlogo.png" alt="Home">
+					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none"><b>MENU</b></a>
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
 				<a id="cartempty" href="#shoppingcartempty">
-					<img src="shoppingcart-emptylogo.png" alt="Cart">
+					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 			</div>
 			<div class= "menu">
 				<div class="menuorder"></div>
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
 				<div class="star">
-					<img src="bluestar.png" alt="star">
+					<img src="images/bluestar.png" alt="star">
 				</div>
 				<div class="customerfavs">CUSTOMER FAVORITES</div>
 				<a id="productdescription" href="./blackberryorder.html">
-					<img src="blackberrybun.png" alt="Blackberry"></a>
+					<img src="images/blackberrybun.png" alt="Blackberry"></a>
 				<a id="carameldescription" href="./caramelpecanorder.html">
-					<img src="caramelpecanbun.png" alt="Caramel Pecan"></a>
+					<img src="images/caramelpecanbun.png" alt="Caramel Pecan"></a>
 				<a id="originaldescription" href="./originalorder.html">
-					<img src="originalbun.png" alt="Original"></a>
+					<img src="images/originalbun.png" alt="Original"></a>
 				<div class="pumpkinspicemenu">
-					<img src="PUMKINSPICEbun.png" alt="pumpkin spice bun">
+					<img src="images/PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 				<div class="walnut">
-					<img src="walnutbun.png" alt="walnut bun">
+					<img src="images/walnutbun.png" alt="walnut bun">
 				</div>
 				<div class="originalgf">
-					<img src="originalgfbun.png" alt="original gluten free bun">
+					<img src="images/originalgfbun.png" alt="original gluten free bun">
 				</div>
 				<div class="blackberrycustomize">
 					<div class="ordercontainer">
 						<div class= "originalbunonly">
-							<img src="originalbunonly.png" alt="original bun">
+							<img src="images/originalbunonly.png" alt="original bun">
 						</div>
 						<div class="blackberrytitle"><b>ORIGINAL</b></div>
 						<div class="starblackberry">
-							<img src="bluestar.png" alt="starblackberry">
+							<img src="images/bluestar.png" alt="starblackberry">
 						</div>
 						<div class="blackberrydescription">
 							You can never go wrong with our classic, famous <br>original cinnamon buns! These fluffy, warm buns are <br>a customer favorite, and are the perfect snack for <br>any time of day. What's even better is that you can <br>add <i>any</i> glazing you'd like, for <i>no extra cost!</i>
 						</div>
 						<div class="cancel">
 							<a class="active" href="./menu.html">
-								<img src="cancel.png" alt="x">
+								<img src="images/cancel.png" alt="x">
 							</a>
 						</div>
 						<!--
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 			<div class="menubottomfooter">
-				<img src="bunbunlogo.png" alt="Home">
+				<img src="images/bunbunlogo.png" alt="Home">
 				<div class="footer">1234 Best Buns Street, Pittsburgh PA, 15213<br>Email: bunbuns@bunmail.com  l  Phone: (412)-BUN-BUNS</div> 
 			</div>
 		</div>	
