--- a/homework_5/indexbunbun.html
+++ b/homework_5/indexbunbun.html
@@ -16,7 +16,7 @@
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
-				<a id="cartempty" href="#shoppingcartempty">
+				<a id="cartempty" href="./shopingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 			</div>
