--- a/homework_5/updatedcartmenu.html
+++ b/homework_5/updatedcartmenu.html
@@ -16,7 +16,7 @@
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
-				<a id="cart-one" href="#shoppingcart-one">
+				<a id="cart-one" href="./shoppingcart.html">
 					<img src="images/shoppingcart-one.png" alt="Cart-1">
 				</a>
 			</div>
