updated shopping  cart

--- a/homework_5/shoppingcart.html
+++ b/homework_5/shoppingcart.html
@@ -28,14 +28,52 @@
 					<div id='mycart'>
 						<p><b>MY CART</b></p>
 					</div>
+					<div id= "itemcount">
+						<p>(1 Item)</p>
+					</div>
 					<div id="continueshopping">
 						<a id="continue" href="./menu.html"><u>Continue Shopping</u></a>
 					</div>
-					<div id="productimage">
-						<img src="images/blackberrybunonly.png" alt="blackberrybun">
+					<div id="line">
+						<img src = "images/line.png" alt="line">
 					</div>
-
-
+					<div class="product">
+						<div id="productimage">
+							<img src="images/blackberrybunonly.png" alt="blackberrybun">
+						</div>
+						<div id="cancel">
+							<a id="cancel" href="#cancel" style="text-decoration:none">X</a>
+						</div>
+						<div id="price">
+							<p>$14.99</p>
+						</div>
+						<div id="bunname">
+							<p>Blackberry Cinnamon Buns</p>
+						</div>
+						<p id="glazing">Glazing: Sugar-Milk</p>
+						<p id= "quantity">Quantity: 12</p>
+					</div>
+					<p id="subtotal"><b>SUBTOTAL</b></p>
+					<p id="subtotalcost"><b>$14.99</b></p>
+			</div>
+			<div class= "total">
+				<p id="total"><b>TOTAL</b></p>
+				<p id="totalcost"><b>$19.61</b></p>
+				<div id="shortline">
+					<img src = "images/line.png" alt="line">
+				</div>
+				<p id="labels"><b>Subtotal<br><br><br>
+					Delivery<br><br><br>
+					Tax</b></p>
+				<p id="costs">$14.99<br><br><br>
+					$2.99<br><br><br>
+				$1.63</p>
+				<div id="bottomline">
+					<img src = "images/line.png" alt="line">
+				</div>
+				<div class="proceedbutton">
+					<p id="checkout"><b>PROCEED TO CHECKOUT</b></p>
+				</div>
 			</div>
 			<div class=bottomfooter>
 				<img src="images/bunbunlogo.png" alt="Home">
