--- a/homework_5/shoppingcart.html
+++ b/homework_5/shoppingcart.html
@@ -71,9 +71,10 @@
 				<div id="bottomline">
 					<img src = "images/line.png" alt="line">
 				</div>
-				<div class="proceedbutton">
+				<a id= "checkoutbutton" href="#checkoutbutton">
+					<div class="proceedbutton">
 					<p id="checkout"><b>PROCEED TO CHECKOUT</b></p>
-				</div>
+				</div></a>
 			</div>
 			<div class=bottomfooter>
 				<img src="images/bunbunlogo.png" alt="Home">
