--- a/homework_5/shoppingcart.html
+++ b/homework_5/shoppingcart.html
@@ -56,8 +56,8 @@
 					<p id="subtotal"><b>SUBTOTAL</b></p>
 					<p id="subtotalcost"><b>$14.99</b></p>
 			</div>
-			<div class= "total">
-				<p id="total"><b>TOTAL</b></p>
+			<div class= "shoppingtotal">
+				<p id="shoppingtotal"><b>TOTAL</b></p>
 				<p id="totalcost"><b>$19.61</b></p>
 				<div id="shortline">
 					<img src = "images/line.png" alt="line">
