--- a/homework_5/shoppingcart.html
+++ b/homework_5/shoppingcart.html
@@ -51,7 +51,7 @@
 							<p>Blackberry Cinnamon Buns</p>
 						</div>
 						<p id="glazing">Glazing: Sugar-Milk</p>
-						<p id= "quantity">Quantity: 12</p>
+						<p id= "summaryquantity">Quantity: 12</p>
 					</div>
 					<p id="subtotal"><b>SUBTOTAL</b></p>
 					<p id="subtotalcost"><b>$14.99</b></p>
