--- a/homework_5/shoppingcart.html
+++ b/homework_5/shoppingcart.html
@@ -50,7 +50,7 @@
 						<div id="bunname">
 							<p>Blackberry Cinnamon Buns</p>
 						</div>
-						<p id="glazing">Glazing: Sugar-Milk</p>
+						<p id="summaryglazing">Glazing: Sugar-Milk</p>
 						<p id= "summaryquantity">Quantity: 12</p>
 					</div>
 					<p id="subtotal"><b>SUBTOTAL</b></p>
