--- a/homework_6a/blackberryupdated.html
+++ b/homework_6a/blackberryupdated.html
@@ -7,7 +7,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<div class="pagecontainer">
+		<div class= "pagecontainer">
 			<div class="navbar">
 				<a class="active" id="homelogo" href="./indexbunbun.html">
 					<img src="images/bunbunlogo.png" alt="Home">
@@ -19,7 +19,6 @@
 				<a id="cartempty" href="./shoppingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
-				<input type="text" id="inc" value="0"></input>
 			</div>
 			<div class= "menu">
 				<div class="menuorder"></div>
@@ -45,12 +44,15 @@
 				</div>
 				<div class="blackberrycustomize">
 					<div class="ordercontainer">
-						<div class= "blackberryalone">
-							<img src="images/caramelpecanonly.png" alt="caramel pecan">
+						<div class= "blackberryalone" id="blackberryimage">
+							<img src="images/blackberrybunonly.png" alt="blackberry bun">
 						</div>
-						<div class="carameltitle"><b>CARAMEL PECAN</b></div>
+						<div class="blackberrytitle"><b>BLACKBERRY</b></div>
+						<div class="starblackberry">
+							<img src="images/bluestar.png" alt="star">
+						</div>
 						<div class="blackberrydescription">
-							Every morning, we carefully fill our freshly kneaded dough with our secret caramel sauce and toasted <br>pecan filling. Then once they're baked to <i>golden <br>perfection,</i> we drizzle a homemade glazing of your choice and perfect them with our warm, crisp pecans.
+							This fresh, fruity bun is a fan favorite! Every morning,<br>we infuse our <i>freshly kneaded</i> buttery dough with<br>the juiciest local blackberries. Then we bake every <br>bun until it’s <i>golden brown</i>, and top it off with a <br>sweet, glazing of your choosing, at no extra cost!
 						</div>
 						<div class="cancel">
 							<a class="active" href="./menu.html">
@@ -64,43 +66,44 @@
 							</a>
 						</div>
 						-->
-						<div class="glazingdropdown">
-							<form class="dropdown">
+						<form class="add-to-cart-glazing" action="shoppingcart.html" method="post">
+							<div class="glazingdropdown">
 	  							<label for="glazing">Glazing</label>
-	 	 						<select class= "glazing" id="caramelglazing" name="glazing">
+	 	 						<select class="glazing" id="blackberryglazing" name="glazing">
 	  								<option value="-">-</option>
 	  								<option value="None">None</option>
 	  								<option value="Sugar-Milk">  Sugar-Milk</option>
 	  								<option value="Vanilla-Milk">  Vanilla-Milk</option>
 	  								<option value="Double-Chocolate">  Double-Chocolate</option>
 	  							</select>
-	  						</form>
-	 					</div>
-	 					<div class="quantitydropdown">
-	  						<label for="quantity">Quantity</label>
-	  						<select id="caramelquantity" class=quantity onchange="changeCaramelTotal()">
-							  <option value="-">-</option>
-							  <option value="$1.99">1 ($1.99)</option>
-							  <option value="$4.99">3 ($4.99)</option>
-							  <option value="$8.99">6 ($8.99)</option>
-							  <option value="$14.99">12 ($14.99)</option>
-							</select>	  				
-	 					</div>
+	  						</div>
+	 					</form>
+	 					<form class="add-to-cart-quantitys" action="shoppingcart.html" method="post">
+		 					<div class="quantitydropdown">
+		  						<label for="quantity">Quantity</label>
+		  						<select id="blackberryquantity" class="quantity" onchange="changeBlackberryTotal()">
+								  <option value="-">-</option>
+								  <option value="$1.99">1 ($1.99)</option>
+								  <option value="$4.99">3 ($4.99)</option>
+								  <option value="$8.99">6 ($8.99)</option>
+								  <option value="$14.99">12 ($14.99)</option>
+								</select>	  				
+		 					</div>
+		 				</form>
 	 					<div class="addtocart">
-	 						<p id="blackberryaddtocart">
-	 						<button class="itemsubmit" id="submititem" onclick="buttonClick()">ADD TO CART</button>	 					</p>
+	 						<a id="submititem" href="./menu.html" style="text-decoration:none"><p id="blackberryaddtocart"><input type="submit" onclick="addItem();" value="ADD TO CART" class="itemsubmit" /></p></a>
 						</div>
 						<div class="total">
-							<h2 id="carameltotal">TOTAL: -</h2>
+							<h2 id="blackberrytotal">TOTAL: -</h2>
 						</div>
 					</div>
 				</div>
 			</div>
-			<footer class="menubottomfooter">
+			<div class="menubottomfooter">
 				<img src="images/bunbunlogo.png" alt="Home">
 				<div class="footer">1234 Best Buns Street, Pittsburgh PA, 15213<br>Email: bunbuns@bunmail.com  l  Phone: (412)-BUN-BUNS</div> 
-			</footer>
-		</div>
+			</div>
+		</div>	
 		<script src="myscripts.js"></script>
 	</body>	
 </html>
