--- a/homework_6a/menu.html
+++ b/homework_6a/menu.html
@@ -13,12 +13,13 @@
 					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none"><b>MENU</b></a>
-				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
-				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
-				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
+				<a id="ourstory" href="javascript:;" style="text-decoration:none">OUR STORY</a>
+				<a id="contact" href="javascript:;" style="text-decoration:none">CONTACT</a>
+				<a id="signin" href="javascript:;" style="text-decoration:none">SIGN IN</a>
 				<a id="cartempty" href="./shoppingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
+				<input type="text" id="inc" value="0"></input>
 			</div>
 			<div class= "menu">
 				<div class="ourfamousbuns"><u>OUR HOMEMADE BUNS</u></div>
