--- a/homework_6a/originalorder.html
+++ b/homework_6a/originalorder.html
@@ -13,12 +13,13 @@
 					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none"><b>MENU</b></a>
-				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
-				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
-				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
+				<a id="ourstory" href="javascript:;" style="text-decoration:none">OUR STORY</a>
+				<a id="contact" href="javascript:;" style="text-decoration:none">CONTACT</a>
+				<a id="signin" href="javascript:;" style="text-decoration:none">SIGN IN</a>
 				<a id="cartempty" href="./shoppingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
+				<input type="text" id="inc" value="0"></input>
 			</div>
 			<div class= "menu">
 				<div class="menuorder"></div>
@@ -69,7 +70,7 @@
 						<div class="glazingdropdown">
 							<form class="dropdown">
 	  							<label for="glazing">Glazing</label>
-	 	 						<select id="glazing" name="glazing">
+	 	 						<select class="glazing" id="originalglazing" name="glazing">
 	  								<option value="-">-</option>
 	  								<option value="None">None</option>
 	  								<option value="Sugar-Milk">  Sugar-Milk</option>
@@ -79,22 +80,21 @@
 	  						</form>
 	 					</div>
 	 					<div class="quantitydropdown">
-							<form class="dropdown">
-	  							<label for="quantity">Quantity</label>
-	 	 						<select id="quantity" name="quantity">
-	  								<option value="-">-</option>
-	  								<option value="1">1 ($1.99)</option>
-	  								<option value="3">3 ($4.99)</option>
-	  								<option value="6">6 ($8.99)</option>
-	  								<option value="12">12 ($14.99)</option>
-	  							</select>
-	  						</form>
+	  						<label for="quantity">Quantity</label>
+	  						<select id="originalquantity" class=quantity onchange="changeOriginalTotal()">
+							  <option value="-">-</option>
+							  <option value="$1.99">1 ($1.99)</option>
+							  <option value="$4.99">3 ($4.99)</option>
+							  <option value="$8.99">6 ($8.99)</option>
+							  <option value="$14.99">12 ($14.99)</option>
+							</select>	  				
 	 					</div>
 	 					<div class="addtocart">
-							<a id="addtocart" href="./updatedcartmenu.html" style="text-decoration:none"><h2>ADD TO CART</h2></a>
+	 						<p id="blackberryaddtocart">
+	 						<button class="itemsubmit" id="submititem" onclick="buttonClick()">ADD TO CART</button>	 					</p>
 						</div>
 						<div class="total">
-							<h2>TOTAL: <b>$14.99</b></h2>
+							<h2 id="originaltotal">TOTAL: -</h2>
 						</div>
 					</div>
 				</div>
@@ -104,5 +104,6 @@
 				<div class="footer">1234 Best Buns Street, Pittsburgh PA, 15213<br>Email: bunbuns@bunmail.com  l  Phone: (412)-BUN-BUNS</div> 
 			</div>
 		</div>	
+		<script src="myscripts.js"></script>
 	</body>	
 </html>
