--- a/homework_6a/updatedcartmenu.html
+++ b/homework_6a/updatedcartmenu.html
@@ -16,8 +16,8 @@
 				<a id="ourstory" href="#ourstory" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="#contact" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="#signin" style="text-decoration:none">SIGN IN</a>
-				<a id="cart-one" href="./shoppingcart.html">
-					<img src="images/shoppingcart-one.png" alt="Cart-1">
+				<a id="cartempty" href="./shoppingcart.html">
+					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 			</div>
 			<div class= "menu">
