--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<body>
 		<h1>Welcome to Jocelyn Gao's GitHub Page</h1>
 		<p>To access my homework 5 bun bun website, click <a id="linktohw5" href="./homework_5/indexbunbun.html">here</a></p>
-		<p>To access my homework 6 bun bun website, click <a id="linktohw6a" href="./homework_6a/indexbunbun.html">here</a></p>
+		<p>To access my homework 6 bun bun website, click <a id="linktohw6a" href="./assgn6/indexbunbun.html">here</a></p>
 	</body>
 </html>
