--- a/assgn6/blackberryupdated.html
+++ b/assgn6/blackberryupdated.html
@@ -9,7 +9,7 @@
 	<body>
 		<div class= "pagecontainer">
 			<div class="navbar">
-				<a class="active" id="homelogo" href="./indexbunbun.html">
+				<a class="active" id="homelogo" href="./index.html">
 					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
 				<a id="menu" href="./menu.html" style="text-decoration:none"><b>MENU</b></a>
