--- a/assgn6/emptyshoppingcart.html
+++ b/assgn6/emptyshoppingcart.html
@@ -24,7 +24,7 @@
 				<div id="emptycartpage">
 					<p id="emptymessage"><b>Your Shopping Cart is Empty!</b></p>
 					<img src="images/shoppingcart-emptylogo.png" alt="emptycart">
-					<div id="keepshopping"><b>CONTINUE BROWSING</b></div>
+					<a id="keepshopping" href="./testingmenuwithcart.html" style="text-decoration:none"><b>CONTINUE BROWSING</b></a>
 			</div>
 			<div class=bottomfooter>
 				<img src="images/bunbunlogo.png" alt="Home">
