--- a/assgn6/index.html
+++ b/assgn6/index.html
@@ -12,11 +12,11 @@
 				<a class="active" id="homelogo" href="./index.html">
 					<img src="images/bunbunlogo.png" alt="Home">
 				</a>
-				<a id="menu" href="./menu.html" style="text-decoration:none">MENU</a>
+				<a id="menu" href="./testingmenuwithcart.html" style="text-decoration:none">MENU</a>
 				<a id="ourstory" href="javascript:;" style="text-decoration:none">OUR STORY</a>
 				<a id="contact" href="javascript:;" style="text-decoration:none">CONTACT</a>
 				<a id="signin" href="javascript:;" style="text-decoration:none">SIGN IN</a>
-				<a id="cartempty" href="./shoppingcart.html">
+				<a id="cartempty" href="./emptyshoppingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
 				<input type="text" id="inc" value="0"></input>
@@ -26,21 +26,21 @@
 				<div class="top-left">Welcome to<br>to Bun Bun's<br>Bake Shop!</div>
 				<div class="deliver">We Deliver Our Homemade Artisan Buns</div>
 				<div class="ordernow">
-					<a id="ordernow" href="./menu.html" style="text-decoration:none"><h2>ORDER NOW</h2></a>
+					<a id="ordernow" href="./testingmenuwithcart.html" style="text-decoration:none"><h2>ORDER NOW</h2></a>
 				</div>
 			</div>
 			<div class="famousbuns">
 				<div class="ourfamousbuns"><u>OUR FAMOUS BUNS</u></div>
 				<div class="seebakerymenu">
-					<a id="seebakerymenu" href="./menu.html" style="text-decoration:none"><h2>SEE BAKERY MENU</h2></a>
+					<a id="seebakerymenu" href="./testingmenuwithcart.html" style="text-decoration:none"><h2>SEE BAKERY MENU</h2></a>
 				</div>
-				<div class="original">
+				<div id="menuoriginal">
 					<img src="images/originalbun.png" alt="Original Bun" style="width:100%;">
 				</div>
-				<div class="blackberry">
+				<div id="menublackberry">
 					<img src="images/blackberrybun.png" alt="Blackberry Bun" style="width:100%;">
 				</div>
-				<div class="pumpkinspice">
+				<div id="menupumpkinspice">
 					<img src="images/PUMKINSPICEbun.png" alt="pumpkin spice bun">
 				</div>
 			</div>
