--- a/assgn6B/blackberryorder.html
+++ b/assgn6B/blackberryorder.html
@@ -90,11 +90,10 @@
 								  <option value="$14.99">12 ($14.99)</option>
 								</select>	  				
 		 					</div>
+		 					<div class="addtocart">
+		 						<input type="submit" value="ADD TO CART" onclick="AddtoCart('Blackberry','glazing', 'quantity', 'price')"/>
+		 					</div>
 		 				</form>
-	 					<div class="addtocart">
-	 						<p id="blackberryaddtocart">
-	 						<button class="itemsubmit" id="submititem" onclick="buttonClick()">ADD TO CART</button>	 					</p>
-						</div>
 						<div class="total">
 							<h2 id="blackberrytotal">TOTAL: -</h2>
 						</div>
