--- a/assgn6 - Copy/emptyshoppingcart.html
+++ b/assgn6 - Copy/emptyshoppingcart.html
@@ -19,30 +19,12 @@
 				<a id="cartempty" href="./shoppingcart.html">
 					<img src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</a>
-				<input type="text" id="inc" value="0"></input>
 			</div>
-			<div class="container">
- 				<img src="https://cdn.pixabay.com/photo/2019/08/21/13/44/cinnamon-rolls-4421067_960_720.jpg" alt="Buns" style="width:100%;">
-				<div class="top-left">Welcome to<br>to Bun Bun's<br>Bake Shop!</div>
-				<div class="deliver">We Deliver Our Homemade Artisan Buns</div>
-				<div class="ordernow">
-					<a id="ordernow" href="./menu.html" style="text-decoration:none"><h2>ORDER NOW</h2></a>
-				</div>
-			</div>
-			<div class="famousbuns">
-				<div class="ourfamousbuns"><u>OUR FAMOUS BUNS</u></div>
-				<div class="seebakerymenu">
-					<a id="seebakerymenu" href="./menu.html" style="text-decoration:none"><h2>SEE BAKERY MENU</h2></a>
-				</div>
-				<div class="original">
-					<img src="images/originalbun.png" alt="Original Bun" style="width:100%;">
-				</div>
-				<div class="blackberry">
-					<img src="images/blackberrybun.png" alt="Blackberry Bun" style="width:100%;">
-				</div>
-				<div class="pumpkinspice">
-					<img src="images/PUMKINSPICEbun.png" alt="pumpkin spice bun">
-				</div>
+			<div class= "fullpage">
+				<div id="emptycartpage">
+					<p id="emptymessage"><b>Your Shopping Cart is Empty!</b></p>
+					<img src="images/shoppingcart-emptylogo.png" alt="emptycart">
+					<a id="keepshopping" href="./testingmenuwithcart.html" style="text-decoration:none"><b>CONTINUE BROWSING</b></a>
 			</div>
 			<div class=bottomfooter>
 				<img src="images/bunbunlogo.png" alt="Home">
