--- a/assgn6A/testingmenuwithcart.html
+++ b/assgn6A/testingmenuwithcart.html
@@ -21,10 +21,10 @@
 					<img id="shoppingcartlogo" src="images/shoppingcart-emptylogo.png" alt="Cart">
 				</button>
 
-					<!-- shoppng cart modal -->
+					<!-- The Modal -->
 					<div id="cartModal" class="modal">
 
-					  <!-- content -->
+					  <!-- Modal content -->
 					  <div id="modal-content-cart">
 					    <span class="cartclose">CONTINUE SHOPPING</span>
 					    <div class= "fullpage">
@@ -102,10 +102,10 @@
 					<img src="images/blackberrybun.png" alt="Blackberry">
 				</button>
 
-					<!-- Product descript modal -->
+					<!-- The Modal -->
 					<div id="myModal" class="modal">
 
-					  <!-- content -->
+					  <!-- Modal content -->
 					  <div class="modal-content">
 					    <span class="close">&times;</span>
 					    <div class= "blackberryalone" id="blackberryimage">
