--- a/assgn8/ath.html
+++ b/assgn8/ath.html
@@ -392,7 +392,7 @@
 		      <p> Physical Prototype</p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>EMR Redesign</b></h4></a>
 		    </div>
 		   </div>
@@ -401,7 +401,7 @@
 		<div class="container-fluid bg-3 text-center">    
 		  <div class="row">
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/micrositecover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="microsite.html" style="color: black;"><img src="./images/index/micrositecover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>Microsite UI Prototype</b></h4></a>
 		    </div>
 		    <div class="col-sm-4">
