--- a/assgn8/index.html
+++ b/assgn8/index.html
@@ -121,7 +121,7 @@
 		      <h4><b>Microsite UI Prototype</b></h4></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="responsiveweb.html" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>Responsive Web Design</b></h4>
 		      <p> Emergency Response </p></a>
 		    </div>
