--- a/assgn8/ATMredesign.html
+++ b/assgn8/ATMredesign.html
@@ -188,7 +188,6 @@
 				    <li data-target="#myCarousel" data-slide-to="4"></li>
 				    <li data-target="#myCarousel" data-slide-to="5"></li>
 				    <li data-target="#myCarousel" data-slide-to="6"></li>
-				    <li data-target="#myCarousel" data-slide-to="7"></li>
 				  </ol>
 
 				  <!-- Wrapper for slides -->
@@ -307,7 +306,7 @@
 		      <h4><b>Microsite UI Prototype</b></h4></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="responsiveweb.html" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>Responsive Web Design</b></h4>
 		      <p> Emergency Response </p></a>
 		    </div>
