--- a/assgn8/EMRredesign.html
+++ b/assgn8/EMRredesign.html
@@ -99,7 +99,6 @@
 				    <li data-target="#myCarousel" data-slide-to="3"></li>
 				    <li data-target="#myCarousel" data-slide-to="4"></li>
 				    <li data-target="#myCarousel" data-slide-to="5"></li>
-				    <li data-target="#myCarousel" data-slide-to="6"></li>
 				    
 				  </ol>
 
@@ -146,15 +145,14 @@
 			</div>
 			<div class="col-sm-5" style="text-align: left;">
 				<h4> VIEW INFORMATION</h4><br>
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<div id="myCarousel1" class="carousel slide" data-ride="carousel" style="width: 93.5%;">
 				  <!-- Indicators -->
 				  <ol class="carousel-indicators">
-				    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				    <li data-target="#myCarousel" data-slide-to="1"></li>
-				    <li data-target="#myCarousel" data-slide-to="2"></li>
-				    <li data-target="#myCarousel" data-slide-to="3"></li>
-				    <li data-target="#myCarousel" data-slide-to="4"></li>
-				    <li data-target="#myCarousel" data-slide-to="5"></li>
+				    <li data-target="#myCarousel1" data-slide-to="0" class="active"></li>
+				    <li data-target="#myCarousel1" data-slide-to="1"></li>
+				    <li data-target="#myCarousel1" data-slide-to="2"></li>
+				    <li data-target="#myCarousel1" data-slide-to="3"></li>
+				    <li data-target="#myCarousel1" data-slide-to="4"></li>
 				    				    
 				  </ol>
 
@@ -184,11 +182,11 @@
 				  </div>
 
 				  <!-- Left and right controls -->
-				  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				  <a class="left carousel-control" href="#myCarousel1" role="button" data-slide="prev">
 				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				    <span class="sr-only">Previous</span>
 				  </a>
-				  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				  <a class="right carousel-control" href="#myCarousel1" role="button" data-slide="next">
 				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				    <span class="sr-only">Next</span>
 				  </a>
@@ -398,7 +396,7 @@
 		      <p> Physical Prototype</p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>EMR Redesign</b></h4></a>
 		    </div>
 		   </div>
@@ -411,7 +409,7 @@
 		      <h4><b>Microsite UI Prototype</b></h4></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="responsiveweb.html" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>Responsive Web Design</b></h4>
 		      <p> Emergency Response </p></a>
 		    </div>
