--- a/assgn8/microsite.html
+++ b/assgn8/microsite.html
@@ -295,12 +295,12 @@
 		<div class="row">
 			<div class="col-sm-3"></div>
 			<div class="col-sm-6" style="text-align: center;">
-				<div id="myCarousel" class="carousel slide" data-ride="carousel">
+				<div id="myCarousel1" class="carousel slide" data-ride="carousel">
 				  <!-- Indicators -->
 				  <ol class="carousel-indicators">
-				    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				    <li data-target="#myCarousel" data-slide-to="1"></li>
-				    <li data-target="#myCarousel" data-slide-to="2"></li>				    
+				    <li data-target="#myCarousel1" data-slide-to="0" class="active"></li>
+				    <li data-target="#myCarousel1" data-slide-to="1"></li>
+				    <li data-target="#myCarousel1" data-slide-to="2"></li>				    
 				  </ol>
 
 				  <!-- Wrapper for slides -->
@@ -319,11 +319,11 @@
 				  </div>
 
 				  <!-- Left and right controls -->
-				  <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+				  <a class="left carousel-control" href="#myCarousel1" role="button" data-slide="prev">
 				    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
 				    <span class="sr-only">Previous</span>
 				  </a>
-				  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+				  <a class="right carousel-control" href="#myCarousel1" role="button" data-slide="next">
 				    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
 				    <span class="sr-only">Next</span>
 				  </a>
@@ -368,7 +368,7 @@
 		      <h4><b>Microsite UI Prototype</b></h4></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="#" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="responsiveweb.html" style="color: black;"><img src="./images/index/EMRcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>Responsive Web Design</b></h4>
 		      <p> Emergency Response </p></a>
 		    </div>
