--- a/assgn8/ath.html
+++ b/assgn8/ath.html
@@ -387,12 +387,12 @@
 		      <p>Data Driven Environmental Display</p> </a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="atmredesign.html" style="color: black;"><img src="./images/index/ATMcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="ATMredesign.html" style="color: black;"><img src="./images/index/ATMcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>ATM Redesign</b></h4>
 		      <p> Physical Prototype</p></a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/EMScover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="EMRredesign.html" style="color: black;"><img src="./images/index/medicalcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>EMR Redesign</b></h4></a>
 		    </div>
 		   </div>
