--- a/assgn8/ath.html
+++ b/assgn8/ath.html
@@ -71,7 +71,7 @@
 
 
 <div class=bannerimage>
-	<div class="jumbotron" style="background-image: url(./images/ath/bannerimage.jpg); background-size:100% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; align-content: center; height: 400px;">
+	<div class="jumbotron" style="background-image: url(./images/atlantis/bannerimage.jpg); background-size:100% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; align-content: center; height: 400px;">
 	</div>
 </div>
 
@@ -92,14 +92,14 @@
 				We achieved our goal through our visual design of the display and through incorporating other tools, such as motion and an interactive kiosk control that enabled us to <i>put some control back</i> into the travelers' hands. <br></p>
 
 				<video width="580" height="400" controls>
-					<source src = "./images/ath/finaltablet.mp4" type="video/mp4">
+					<source src = "./images/atlantis/finaltablet.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video>
 
 			</div>
 			<div class="col-sm-4" style="text-align: right;">
 				<video width="360" height="638" controls>
-				  <source src="./images/ath/final.mp4" type="video/mp4">
+				  <source src="./images/atlantis/final.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video>
 			</div>
@@ -125,11 +125,11 @@
 		<div class="row">
 			<div class="col-sm-3"></div>
 			<div class="col-sm-3" style="align-content: center; text-align: center; margin-right: 10px;">
-				<a href="./images/ath/currentstate.png"><img src="./images/ath/currentstate.png"></a><br>
+				<a href="./images/atlantis/currentstate.png"><img src="./images/atlantis/currentstate.png"></a><br>
 				<h4> CURRENT STATE</h4>
 			</div>
 			<div class="col-sm-3" style="align-content: center; text-align: center; margin-left: 10px;">
-				<a href="./images/ath/futurestate.png"><img src="./images/ath/futurestate.png"></a><br>
+				<a href="./images/atlantis/futurestate.png"><img src="./images/atlantis/futurestate.png"></a><br>
 				<h4> FUTURE STATE</h4><br><br>
 			</div>
 			<div class="col-sm-3"></div>
@@ -139,7 +139,7 @@
 			<div class="col-sm-10">
 				<p style="font-size: 16px; background-color: white; display: inline-block; line-height: 28px;"> 
 ​
-					We wanted to fully understand all of the data we had on the <a href="./images/ath/rawdata.xlsx">file we received (click here to see)</a> by first determining categories that information fell into for each transportation method (plane, train, and ferry). Then, we used those categories to model the current existing state we were in.<br><br>
+					We wanted to fully understand all of the data we had on the <a href="./images/atlantis/rawdata.xlsx">file we received (click here to see)</a> by first determining categories that information fell into for each transportation method (plane, train, and ferry). Then, we used those categories to model the current existing state we were in.<br><br>
 ​
 					Next, we looked the data we had and determined what data to filter out by thinking about the bare minimum amount of information that travelers would need access to. Within this data pool, we created a model to communicate the data we would include as well as its information hierarchy. Within each transportation method of plane, train, or ferry, the hierarchy is as follows:<br>
 					<span class="space"></span><span class="space"></span><span class="space"></span><span class="space"></span>	1. Destination <br>
@@ -181,7 +181,7 @@
 				<br><br></p>
 			</div>
 			<div class="col-sm-5">
-				<a href="./images/ath/elizabeth.png"><img src="./images/ath/elizabeth.png" style="width: 100%;"></a><br><br><br>
+				<a href="./images/atlantis/elizabeth.png"><img src="./images/atlantis/elizabeth.png" style="width: 100%;"></a><br><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -198,7 +198,7 @@
 				<br><br></p>
 			</div>
 			<div class="col-sm-5">
-				<a href="./images/ath/george.png"><img src="./images/ath/george.png" style="width: 100%;"></a><br><br><br>
+				<a href="./images/atlantis/george.png"><img src="./images/atlantis/george.png" style="width: 100%;"></a><br><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -214,7 +214,7 @@
 				<br><br><br></p>
 			</div>
 			<div class="col-sm-5">
-				<a href="./images/ath/patrick.png"><img src="./images/ath/patrick.png" style="width: 100%;"></a><br><br><br>
+				<a href="./images/atlantis/patrick.png"><img src="./images/atlantis/patrick.png" style="width: 100%;"></a><br><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -229,7 +229,7 @@
 		<div class="row">
 			<div class="col-sm-3"></div>
 			<div class="col-sm-6" style="text-align: center;">
-				<a href="./images/ath/ptfdefinition.png"><img src = "./images/ath/ptfdefinition.png"></a><br><br>
+				<a href="./images/atlantis/ptfdefinition.png"><img src = "./images/atlantis/ptfdefinition.png"></a><br><br>
 			</div>
 			<div class="col-sm-3"></div>
 		</div>
@@ -261,7 +261,7 @@
 		<div class = "row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10" style="align-content: center; text-align: center;">
-				<a href="./images/ath/mapsketches.png"><img style="width: 80%;" src= "./images/ath/mapsketches.png"></a><br><br>
+				<a href="./images/atlantis/mapsketches.png"><img style="width: 80%;" src= "./images/atlantis/mapsketches.png"></a><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -269,7 +269,7 @@
 		<div class = "row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10" style="align-content: center; text-align: center; ">
-				<a href="./images/ath/boardsketch.png"><img src= "./images/ath/boardsketch.png"></a><br><br><br>
+				<a href="./images/atlantis/boardsketch.png"><img src= "./images/atlantis/boardsketch.png"></a><br><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -284,11 +284,11 @@
 		<div class="row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-6" style="text-align: center;">
-				<a href="./images/ath/horizontalprototype1.png"><img style="width: 80%;" src = "./images/ath/horizontalprototype1.png"></a><br><br>
-				<a href="./images/ath/horizontalprototype2.png"><img style="width: 80%;" src = "./images/ath/horizontalprototype2.png"></a><br><br>
+				<a href="./images/atlantis/horizontalprototype1.png"><img style="width: 80%;" src = "./images/atlantis/horizontalprototype1.png"></a><br><br>
+				<a href="./images/atlantis/horizontalprototype2.png"><img style="width: 80%;" src = "./images/atlantis/horizontalprototype2.png"></a><br><br>
 			</div>
 			<div class="col-sm-4" style="text-align: left;">
-				<a href="./images/ath/verticalprototype.png"><img style="width: 80%;" src = "./images/ath/verticalprototype.png"></a><br><br>
+				<a href="./images/atlantis/verticalprototype.png"><img style="width: 80%;" src = "./images/atlantis/verticalprototype.png"></a><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -312,7 +312,7 @@
 		<div class = "row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10" style="align-content: center; text-align: center;">
-				<a href="./images/ath/styleguide.png"><img style="width: 70%;" src= "./images/ath/styleguide.png"></a><br><br><br><br><br>
+				<a href="./images/atlantis/styleguide.png"><img style="width: 70%;" src= "./images/atlantis/styleguide.png"></a><br><br><br><br><br>
 			</div>
 			<div class="col-sm-1"></div>
 		</div>
@@ -328,10 +328,10 @@
 		<div class = "row">
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10" style="align-content: center; text-align: center;">
-				<a href="./images/ath/controlsketches.png"><img style="width: 80%;" src= "./images/ath/controlsketches.png"></a><br><br>
-				<a href="./images/ath/sketches1.png"><img style="width: 60%;" src= "./images/ath/sketches1.png"></a><br><br><br>
+				<a href="./images/atlantis/controlsketches.png"><img style="width: 80%;" src= "./images/atlantis/controlsketches.png"></a><br><br>
+				<a href="./images/atlantis/sketches1.png"><img style="width: 60%;" src= "./images/atlantis/sketches1.png"></a><br><br><br>
 				<p style="font-size: 16px; background-color: white; display: inline-block; line-height: 28px; text-align: left;"> After ideating many solutions with hand sketches, our team decided that the best control to implement was the interactive kiosk that would offer all types of users ease and privacy. It offers ease in that users would be able to purchase the PTF Pass and/or tickets right then and there at the kiosk, without having to wait in a long line to make travel arrangements through a desk attendant, and it offers privacy in that no one else can see what users are doing on the screen.<br><br></p>
-				<a href="./images/ath/touchscreen.png"><img style="width: 80%;" src= "./images/ath/touchscreen.png"></a><br><br>
+				<a href="./images/atlantis/touchscreen.png"><img style="width: 80%;" src= "./images/atlantis/touchscreen.png"></a><br><br>
 				<p style="font-size: 16px; background-color: white; display: inline-block; line-height: 28px; text-align: left;"> On the kiosk, users can click on their destination of interest to see all possible routes, and the arrival times, departure times, and price of each route. Then they can purchase the ticket that best suites their needs (and the PTF Pass if they are not already a member).<br><br>
 				Then users will have to scan their PTF Pass on the scanner to the left of the screen, and can collect their tickets in one of two ways: if they scanned their PTF Pass with their mobile card, they can download their ticket onto their phone, or they can click “PRINT” for a physical copy.<br><br><br></p>
 				<h2 style="text-align: left;">ADDING MOTION TO CREATE VALUE</h2><br><br>
@@ -350,7 +350,7 @@
 			</div>
 			<div class="col-sm-3">
 				<video width="210" height="360" controls>
-				  <source src="./images/ath/final.mp4" type="video/mp4">
+				  <source src="./images/atlantis/final.mp4" type="video/mp4">
 				Your browser does not support the video tag.
 				</video><br>
 			</div>
@@ -364,7 +364,7 @@
 			</div>
 			<div class="col-sm-4">
 				<video style="margin-left: 30px; margin-top: -20px;" width="300" height="200" controls>
-					<source src = "./images/ath/finaltablet.mp4" type="video/mp4">
+					<source src = "./images/atlantis/finaltablet.mp4" type="video/mp4">
 					Your browser does not support the video tag.
 				</video><br><br><br><br>
 			</div>
