--- a/assgn8/outsideAssets/responsiveweb.html
+++ b/assgn8/outsideAssets/responsiveweb.html
@@ -824,7 +824,7 @@
 		      <p>Data Driven Environmental Display</p> </a>
 		    </div>
 		    <div class="col-sm-4">
-		      <a href="atmredesign.html" style="color: black;"><img src="../assets/images/index/ATMcover.png" class="img-responsive" style="width:100%;" alt="Image">
+		      <a href="ATMredesign.html" style="color: black;"><img src="../assets/images/index/ATMcover.png" class="img-responsive" style="width:100%;" alt="Image">
 		      <h4><b>ATM Redesign</b></h4>
 		      <p> Physical Prototype</p></a>
 		    </div>
