--- a/assgn8/index.html
+++ b/assgn8/index.html
@@ -27,7 +27,7 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="200" style="font-family:Lato;">
 
 <div class=welcomesection>
-	<div class="jumbotron" style="background-image: url(./assets/images/index/backgroundimageone.png); background-size:105% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; overflow: hidden;">
+	<div class="jumbotron" style="background-image: url(./assets/images/index/backgroundimageone.png); background-size:105% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; background-attachment: fixed; overflow: hidden;">
 
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 	<div class="container-fluid">
@@ -85,7 +85,7 @@
 </div>
 
 <div class=buffalosection>
-	<div class="jumbotron" style="background-image: url(./assets/images/index/backgroundimagetwo.png); background-size:105% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; overflow: hidden; align-content: center;">
+	<div class="jumbotron" style="background-image: url(./assets/images/index/backgroundimagetwo.png); background-size:105% auto; padding: 0px; margin: 0px; background-repeat: no-repeat; background-attachment: fixed; overflow: hidden; align-content: center;">
 		<div class="d-flex align-items-center">
 			<h1 id = "buffalo" style="color: white;"> BUFFALO, NEW YORK</h1>
 		</div>
