--- a/assgn8/index.html
+++ b/assgn8/index.html
@@ -52,8 +52,10 @@
 	  <div class="d-flex align-items-center" id="welcome">
 	   		<h1>WELCOME TO MY PORTFOLIO</h1>      
 	 		<h3 class="hidden-xs bg-info" style="background-color: transparent; color: white;">JOCELYN GAO  <span class=tab></span>    USER EXPERIENCE DESIGNER</h3><br>
-	 		<a href="#aboutme"><img src="./assets/images/index/downcarrot.png"></a>
 	 		<span id="aboutme"><a name="aboutme"></a></span>
+	 		<div class="downArrow bounce">
+		 		<a href="#aboutme"><img src="./assets/images/index/downcarrot.png"></a>
+		 	</div>
 	 	</div>
 	</div>
 </div>
